# AC-2

./: AC.sln
Client_x64/: CController.cpp  CController.hpp  CEncryption.cpp  CEncryption.hpp  CMapper.cpp  CMapper.hpp  CModule.cpp  CModule.hpp  CPacketHandler.cpp  CPacketQueue.hpp  CSyscall.cpp  CSyscall.hpp  CTCPClient.cpp  CTCPClient.hpp  ClientHandler.cpp  ClientHandler.hpp  Client_x64.vcxproj  Client_x64.vcxproj.filters  Defines.hpp  DllMain.cpp  Game.hpp  Hash.hpp  ISocket.hpp  Memory.hpp  PEB.hpp  PEFile.hpp  Packet.cpp  Packet.hpp  String.hpp  Structs.hpp  Syscall.asm  Syscall.hpp  WinAPI.hpp  ntdll.hpp
Client_x64/x64/Debug/: Client_x64.dll.recipe  Client_x64.exe.recipe  Client_x64.ilk  vc143.idb
Client_x64/x64/Release/: Client_x64.dll.recipe  Client_x64.iobj  Client_x64.ipdb
Client_x64_Mapper_Testdll/: Client_x64_Mapper_Testdll.vcxproj  DllMain.cpp
Client_x64_Testbase/: AESTest.cpp  CPacketTest.cpp  CTCPClientTest.cpp  CTCPServerSocket.hpp  ClientServerTest.cpp  Client_x64_Testbase.vcxproj  Client_x64_Testbase.vcxproj.filters  ModuleMapperTest.cpp  RSATest.cpp
Server_Testbase/: Server_Testbase.sln
Server_Testbase/Server_Testbase/: Server_Testbase.vcxproj  test.cpp
Server_x64/: CMakeLists.txt
Server_x64/src/: CClient.cpp  CClient.hpp  CClientHandler.cpp  CClientHandler.hpp  CTCPServer.cpp  CTCPServer.hpp  CTCPServerSocket.cpp  CTCPServerSocket.hpp  CThreadPool.cpp  CThreadPool.hpp  ISocket.hpp  Server.cpp  Types.hpp
Server_x64/src/openssl/: AES.cpp  AES.hpp  RSA.cpp  RSA.hpp
Server_x64/src/packet/: Packet.cpp  Packet.hpp
(+72 files in other folders)
